Swapped colors to select list, added remove button

--- a/ColorBox/src/BoxList.css
+++ b/ColorBox/src/BoxList.css
@@ -1,5 +1,13 @@
 #boxes {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
+    height: auto;
+    margin-top: 10px;
+}
+
+.boxHolder {
+    display: flex;
+    flex: row wrap;
 }
